# PES-Project

./: CMakeLists.txt  README.md  arm-gcc-toolchain.cmake
docker/: build.sh
docs/diagrams/xml/: block_diagram_hw.drawio  block_diagram_sw.drawio
src/: CMakeLists.txt  common.cmake
src/app/: CMakeLists.txt  app.h  app.ld  infini_app.cpp  infini_app.h  main.c  main.cpp
src/base/: CMakeLists.txt  dynamic_app.c  dynamic_app.cpp  dynamic_app.h  main.c  main.cpp
